<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/codeVerification_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:tag="fragmentCodeVerification"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/sfprodisplaysemibold"
        android:text="@string/verificaci_n"
        android:textAlignment="center"
        android:textColor="#00429A"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewMobileNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sfprodisplaysemibold"
        android:text="@string/_34_616506980"
        android:textAlignment="center"
        android:textColor="#00429A"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sfprodisplaylight"
        android:text="@string/introduce_el_c_digo_de_verificaci_n_que_hemos_enviado_al_tel_fono"
        android:textAlignment="center"
        android:textColor="#00429A"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sfprodisplaylight"
        android:text="@string/no_has_recibido_el_c_digo"
        android:textAlignment="center"
        android:textColor="#00429A"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMobileNumber" />

    <EditText
        android:id="@+id/editTextCode"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/editextborder"
        android:ems="10"
        android:fontFamily="@font/sfprodisplaylight"
        android:inputType="phone"
        android:paddingLeft="10dp"
        android:textAlignment="textStart"
        android:textColor="#0E81E9"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sfprodisplayregular"
        android:text="@string/tu_c_digo"
        android:textColor="#2699FB"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextCode"
        app:layout_constraintEnd_toEndOf="@+id/editTextCode"
        app:layout_constraintTop_toTopOf="@+id/editTextCode"
        app:layout_constraintVertical_bias="0.483" />

    <Button
        android:id="@+id/resendbutton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/sfprodisplaymedium"
        android:text="@string/reenviar"
        android:textColor="#C674E8"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/verifyButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/gradientbutton"
        android:fontFamily="@font/sfprodisplaymedium"
        android:text="@string/verificar"
        android:textColor="#FFFFFF"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resendbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>