<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuccesfulRegisterActivity">

    <TextView
        android:id="@+id/bioMessageDialog3"
        android:layout_width="253dp"
        android:layout_height="69dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/sfprodisplaylight"
        android:text="@string/si_quieres_registrar_a_m_s_hu_spedes_comparte_este_link_o_reg_stralos_t_mismo"
        android:textAlignment="center"
        android:textColor="#2D508E"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/shareButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonGetKeys"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/gradientbutton"
        android:clickable="true"
        android:fontFamily="@font/sfprodisplaymedium"
        android:text="@string/accede_a_tus_llaves"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14" />

    <Button
        android:id="@+id/shareButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="28dp"

        android:background="@drawable/gradientbutton"
        android:clickable="true"
        android:fontFamily="@font/sfprodisplaymedium"
        android:text="@string/compartir"
        android:textColor="#FFFFFF"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/congratulationsTextView"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sfprodisplaybold"
        android:text="@string/enhorabuena_alex"
        android:textAlignment="center"
        android:textColor="#00429A"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/sfprodisplaybold"
        android:text="@string/registro_completado"
        android:textAlignment="center"
        android:textColor="#0063F6"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/congratulationsTextView" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="124dp"
        android:layout_height="28dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="144dp"
        app:srcCompat="@drawable/chekinkeylogo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="282dp"
        android:layout_height="190dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/illustrationbackgroundimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        tools:srcCompat="@drawable/illustrationbackgroundimg" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:elevation="3dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/keyicn"
        app:layout_constraintBottom_toBottomOf="@+id/buttonGetKeys"
        app:layout_constraintStart_toStartOf="@+id/buttonGetKeys"
        app:layout_constraintTop_toBottomOf="@+id/imageView14"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>