<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:background="#33E3F3FF"
    android:radius="6dip"
    android:minWidth="300dp"
    android:minHeight="300dp"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageDialog"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chekinlogo" />

    <TextView
        android:id="@+id/sexTitleDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="92dp"
        android:fontFamily="@font/sfprodisplaybold"
        android:text="@string/verificado"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageDialog" />

    <TextView
        android:id="@+id/bioMessageDialog"
        android:layout_width="208dp"
        android:layout_height="69dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/sfprodisplaylight"
        android:text="@string/ya_puedes_disfrutar_de_tu_tus_llaves_pulsa_ok_y_accede_a_tus_reservas"
        android:textAlignment="center"
        android:textColor="#81C3F8"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexTitleDialog" />

    <Button
        android:id="@+id/continueButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="54dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/sfprodisplaymedium"
        android:text="@string/ok"
        android:textColor="#FF9DDB"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bioMessageDialog" />

</androidx.constraintlayout.widget.ConstraintLayout>