<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"

    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sfprodisplaysemibold"
        android:text="@string/accede_a_tu_llave"
        android:textAlignment="center"
        android:textColor="#00429A"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/sfprodisplaylight"
        android:text="@string/inserta_tu_email_abajo_y_te_enviaremos_las_instrucciones_para_que_recuperes_tu_contrase_a"
        android:textAlignment="center"
        android:textColor="#00429A"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/editextborder"
        android:ems="10"
        android:fontFamily="@font/sfprodisplaylight"
        android:inputType="phone"
        android:paddingLeft="10dp"
        android:textAlignment="textStart"
        android:textColor="#0E81E9"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sfprodisplayregular"
        android:text="@string/tu_tel_fono"
        android:textColor="#2699FB"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="@+id/editText"
        app:layout_constraintVertical_bias="0.483" />

    <com.rilixtech.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="133dp"
        android:layout_height="37dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="240dp"
        app:ccp_defaultNameCode="ES"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/gradientbutton"
        android:fontFamily="@font/sfprodisplaymedium"
        android:stateListAnimator="@null"
        android:text="@string/enviar"
        android:textColor="#FFFFFF"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

</androidx.constraintlayout.widget.ConstraintLayout>