<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:background="@drawable/dialog_bg"
    android:minWidth="300dp"
    android:minHeight="300dp"
    android:orientation="vertical"
    android:radius="6dip">


    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/chekinlogo"
        android:scaleType="fitXY"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dialogUnlockButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="47dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="2dp"
        android:background="@color/defaultBackgroundColor"
        android:fontFamily="@font/sfprodisplaymedium"
        android:text="@string/ok"
        android:textColor="#C674E8"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bioMessageDialog" />

    <TextView
        android:id="@+id/sexTitleDialog"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/sfprodisplaybold"
        android:text="@string/abierta"
        android:textAlignment="center"
        android:textColor="#182E56"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView18" />


    <TextView
        android:id="@+id/bioMessageDialog"
        android:layout_width="208dp"
        android:layout_height="69dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/sfprodisplaylight"
        android:text="@string/ya_puedes_abrir_la_puerta_de_tu_habitaci_n"
        android:textAlignment="center"
        android:textColor="#2D508E"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexTitleDialog" />

</androidx.constraintlayout.widget.ConstraintLayout>